Rename codified errors to errors catalog

--- a/docs/sources/release-notes/v2.2.md
+++ b/docs/sources/release-notes/v2.2.md
@@ -20,7 +20,7 @@ For the complete list of changes, see the [Changelog](https://github.com/grafana
   **TODO: Link to documentation after https://github.com/grafana/mimir/pull/2183 is merged.**
 
 - **Error messages**: The error messages that Mimir reports are more human readable, and the messages include error codes that are easily searchable.
-  For descriptions of errors, see the [Grafana Mimir runbooks / Codified errors]({{< relref "../operators-guide/mimir-runbooks/_index.md#codified-errors" >}}).
+  For descriptions of errors, see the [Grafana Mimir runbooks / Errors catalog]({{< relref "../operators-guide/mimir-runbooks/_index.md#errors-catalog" >}}).
 
 - **Configurable prefix for object storage**: Mimir can now store block data, rules, and alerts in one bucket, each under its own user-defined prefix, rather than requiring one bucket for each. You can configure the storage prefix by using `-<storage>.storage-prefix` option for corresponding storage: `ruler-storage`, `alertmanager-storage` or `blocks-storage`.
 
