--- a/docs/sources/release-notes/v2.2.md
+++ b/docs/sources/release-notes/v2.2.md
@@ -17,24 +17,30 @@ For the complete list of changes, see the [Changelog](https://github.com/grafana
 - **Support for ingesting out-of-order samples**: Grafana Mimir includes new, experimental support for ingesting out-of-order samples.
   This support is configurable, with users able to set how far out-of-order Mimir will accept samples on a per-tenant basis.
   Note that this feature still needs a heavy testing, and is not production-ready yet.
-  **TODO: Link to documentation after https://github.com/grafana/mimir/pull/2183 is merged.**
+  For documentation see [Configuring out-of-order samples ingestion]({{< relref "../operators-guide/configuring/configuring-out-of-order-samples-ingestion.md" >}})
 
 - **Error messages**: The error messages that Mimir reports are more human readable, and the messages include error codes that are easily searchable.
   For descriptions of errors, see the [Grafana Mimir runbooks / Errors catalog]({{< relref "../operators-guide/mimir-runbooks/_index.md#errors-catalog" >}}).
 
-- **Configurable prefix for object storage**: Mimir can now store block data, rules, and alerts in one bucket, each under its own user-defined prefix, rather than requiring one bucket for each. You can configure the storage prefix by using `-<storage>.storage-prefix` option for corresponding storage: `ruler-storage`, `alertmanager-storage` or `blocks-storage`.
+- **Configurable prefix for object storage**: Mimir can now store block data, rules, and alerts in one bucket, each under its own user-defined prefix, rather than requiring one bucket for each.
+  You can configure the storage prefix by using `-<storage>.storage-prefix` option for corresponding storage: `ruler-storage`, `alertmanager-storage` or `blocks-storage`.
 
 ## Upgrade considerations
 
 We have updated default values and some parameters in Grafana Mimir 2.2 to give you a better out-of-the-box experience:
 
-- Message size limits for gRPC messages exchanged between internal Mimir components increased to 100 MiB from the previous 4 MiB. This helps to avoid internal server errors when pushing or querying large data.
+- Message size limits for gRPC messages exchanged between internal Mimir components increased to 100 MiB from the previous 4 MiB.
+  This helps to avoid internal server errors when pushing or querying large data.
 
-- The `-blocks-storage.bucket-store.ignore-blocks-within` parameter changed from `0` to `10h`. The default value of `-querier.query-store-after` changed from `0` to `12h`. Both changes improve query-performance for most-recent data by querying only the ingesters, rather than object storage.
+- The `-blocks-storage.bucket-store.ignore-blocks-within` parameter changed from `0` to `10h`.
+  The default value of `-querier.query-store-after` changed from `0` to `12h`.
+  Both changes improve query-performance for most-recent data by querying only the ingesters, rather than object storage.
 
-The option `-querier.shuffle-sharding-ingesters-lookback-period` has been deprecated. If you previously changed this option from its default of `0s`, set `-querier.shuffle-sharding-ingesters-enabled` to `true` and specify the lookback period by setting the `-querier.query-ingesters-within` option.
+- The option `-querier.shuffle-sharding-ingesters-lookback-period` has been deprecated.
+  If you previously changed this option from its default of `0s`, set `-querier.shuffle-sharding-ingesters-enabled` to `true` and specify the lookback period by setting the `-querier.query-ingesters-within` option.
 
-- The `-memberlist.abort-if-join-fails` parameter now defaults to false. This means that when using memberlist and a component fails to join the memberlist cluster, it no longer aborts startup by default.
+- The `-memberlist.abort-if-join-fails` parameter now defaults to false.
+  This means that when using memberlist and a component fails to join the memberlist cluster, it no longer aborts startup by default.
 
 ## Bug fixes
 
