Updated memberlist note.
Signed-off-by: Peter Štibraný <pstibrany@gmail.com>

--- a/docs/sources/release-notes/v2.2.md
+++ b/docs/sources/release-notes/v2.2.md
@@ -40,7 +40,7 @@ We have updated default values and some parameters in Grafana Mimir 2.2 to give 
   If you previously changed this option from its default of `0s`, set `-querier.shuffle-sharding-ingesters-enabled` to `true` and specify the lookback period by setting the `-querier.query-ingesters-within` option.
 
 - The `-memberlist.abort-if-join-fails` parameter now defaults to false.
-  This means that when using memberlist and a component fails to join the memberlist cluster, it no longer aborts startup by default.
+  When Mimir is using memberlist as a backend store for hash ring, and it fails to join the memberlist cluster, Mimir no longer aborts startup by default.
 
 ## Bug fixes
 
