Added placeholder for Helm Chart update.
Signed-off-by: Peter Štibraný <pstibrany@gmail.com>

--- a/docs/sources/release-notes/v2.2.md
+++ b/docs/sources/release-notes/v2.2.md
@@ -25,6 +25,8 @@ For the complete list of changes, see the [Changelog](https://github.com/grafana
 - **Configurable prefix for object storage**: Mimir can now store block data, rules, and alerts in one bucket, each under its own user-defined prefix, rather than requiring one bucket for each.
   You can configure the storage prefix by using `-<storage>.storage-prefix` option for corresponding storage: `ruler-storage`, `alertmanager-storage` or `blocks-storage`.
 
+- **Helm Chart update**: TBD
+
 ## Upgrade considerations
 
 We have updated default values and some parameters in Grafana Mimir 2.2 to give you a better out-of-the-box experience:
