Added Marco's suggestions.
Signed-off-by: Peter Štibraný <pstibrany@gmail.com>

--- a/docs/sources/release-notes/v2.2.md
+++ b/docs/sources/release-notes/v2.2.md
@@ -27,6 +27,12 @@ For the complete list of changes, see the [Changelog](https://github.com/grafana
 
 - **Helm Chart update**: TBD
 
+- **Store-gateway can now optionally prepopulate the file system cache when memory-mapping index-header files.**
+  This can help store-gateway to avoid looking stuck while processing index-headers.
+  Feature can be enabled with new experimental flag `-blocks-storage.bucket-store.index-header.map-populate-enabled`.
+
+- **Faster ingester startup**: Ingesters now replay Write-Ahead-Log by about 50% faster, and they also re-join the ring sooner under some conditions. 
+
 ## Upgrade considerations
 
 We have updated default values and some parameters in Grafana Mimir 2.2 to give you a better out-of-the-box experience:
@@ -36,7 +42,7 @@ We have updated default values and some parameters in Grafana Mimir 2.2 to give 
 
 - The `-blocks-storage.bucket-store.ignore-blocks-within` parameter changed from `0` to `10h`.
   The default value of `-querier.query-store-after` changed from `0` to `12h`.
-  Both changes improve query-performance for most-recent data by querying only the ingesters, rather than object storage.
+  Both changes improve query performance for most-recent data by querying only the ingesters, rather than object storage.
 
 - The option `-querier.shuffle-sharding-ingesters-lookback-period` has been deprecated.
   If you previously changed this option from its default of `0s`, set `-querier.shuffle-sharding-ingesters-enabled` to `true` and specify the lookback period by setting the `-querier.query-ingesters-within` option.
@@ -49,3 +55,4 @@ We have updated default values and some parameters in Grafana Mimir 2.2 to give 
 - [PR 1883](https://github.com/grafana/mimir/pull/1883): Fixed a bug that caused the query-frontend and querier to crash when they received a user query with a special regular expression label matcher.
 - [PR 1933](https://github.com/grafana/mimir/pull/1933): Fixed a bug in the [ingester ring page]({{< relref "../operators-guide/reference-http-api/index.md#ingesters-ring-status" >}}), which showed incorrect status of entries in the ring.
 - [PR 2090](https://github.com/grafana/mimir/pull/2090): Ruler in [remote rule evaluation mode]({{< relref "../operators-guide/architecture/components/ruler/index.md#remote" >}}) now applies the timeout correctly. Previously the ruler could get stuck forever, which halted rule evaluation.
+- [PR 2036](https://github.com/grafana/mimir/pull/2036): Fixed panic at startup when Mimir is running in monolithic mode and query sharding is enabled.
