--- a/docs/sources/release-notes/v2.2.md
+++ b/docs/sources/release-notes/v2.2.md
@@ -28,7 +28,7 @@ For the complete list of changes, see the [Changelog](https://github.com/grafana
 - **Helm Chart update**: TBD
 
 - **Store-gateway can now optionally prepopulate the file system cache when memory-mapping index-header files.**
-  This can help store-gateway to avoid looking stuck while processing index-headers.
+  This can help store-gateway to avoid looking stuck while loading index-headers.
   Feature can be enabled with new experimental flag `-blocks-storage.bucket-store.index-header.map-populate-enabled`.
 
 - **Faster ingester startup**: Ingesters now replay Write-Ahead-Log by about 50% faster, and they also re-join the ring sooner under some conditions. 
